force-app/main/default/objects/Assortment_Detail__c/fields/NewCorpNDClientBasedPtsGapTargetNegoP1__c.field-meta.xml
<CustomField>
    <fullName>NewCorpNDClientBasedPtsGapTargetNegoP1__c</fullName>
    <description>Gap ND Budget</description>
    <formula>New_Corp_ND_ClientBased_pts__c - FactRefClientNDClientBasedPts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gap ND Budget</inlineHelpText>
    <label>New Corp ND CltBased pts-Gap Target N-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>