force-app/main/default/objects/Assortment_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Assortment BU Details</relationshipLabel>
    <relationshipName>Assortment_BU_Details</relationshipName>
    <type>Lookup</type>
</CustomField>