force-app/main/default/objects/Assortment_Detail__c/fields/Product_EAN__c.field-meta.xml
<CustomField>
    <fullName>Product_EAN__c</fullName>
    <formula>Product__r.Product_EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product EAN</label>
    <type>Text</type>
</CustomField>