force-app/main/default/objects/Assortment_Detail__c/fields/Product_End_Year__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Year__c</fullName>
    <formula>YEAR(Product__r.Market_End_of_Life_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product End Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>