force-app/main/default/objects/Assortment_Detail__c/fields/Product_linked__c.field-meta.xml
<CustomField>
    <fullName>Product_linked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Assortment BU Details (Linked Product)</relationshipLabel>
    <relationshipName>Assortment_BU_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>