force-app/main/default/objects/Assortment_Detail__c/fields/Product_Linked_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Linked_Code__c</fullName>
    <formula>Product_linked__r.ProductCode</formula>
    <label>Linked Product Code</label>
    <type>Text</type>
</CustomField>