force-app/main/default/objects/Assortment_Detail__c/fields/Product_Linked_EAN__c.field-meta.xml
<CustomField>
    <fullName>Product_Linked_EAN__c</fullName>
    <formula>Product_linked__r.Product_EAN__c</formula>
    <label>Linked Product EAN</label>
    <type>Text</type>
</CustomField>