force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Budget_WD_MarketBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>Ref_Budget_WD_MarketBased_Pts__c</fullName>
    <formula>Ref_Corp_Assortment__r.New_Client_WD_MarketBased_Pts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Budget WD MarketBased (Pts)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>