force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Client_Assortment__c.field-meta.xml
<CustomField>
    <fullName>Ref_Client_Assortment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref Client Assortment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ref_Client_Assortment__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Assortment_Detail__c.Assortment_BU__r.Assortment_type__c</field>
            <operation>equals</operation>
            <value>In, Out</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assortment_Detail__c</referenceTo>
    <relationshipLabel>Assortment BU Details (Ref Client Assortment)</relationshipLabel>
    <relationshipName>Assortment_BU_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>