force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Client_ND_ClientBased_Nego__c.field-meta.xml
<CustomField>
    <fullName>Ref_Client_ND_ClientBased_Nego__c</fullName>
    <formula>Ref_Client_Assortment__r.L4L_Client_ND_ClientBased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client ND ClientBased Nego</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>