force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Client_ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>Ref_Client_ProductNumber__c</fullName>
    <formula>Ref_Client_Assortment__r.New_Client_ProductNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client ProductNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>