force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Client_WD_MarketBased__c.field-meta.xml
<CustomField>
    <fullName>Ref_Client_WD_MarketBased__c</fullName>
    <formula>Ref_Client_Assortment__r.Fact_WD_MarketBased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client WD MarketBased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>