force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Client_WD_MarketBased_Nego__c.field-meta.xml
<CustomField>
    <fullName>Ref_Client_WD_MarketBased_Nego__c</fullName>
    <formula>If (Ref_Client_Assortment__r.L4L_Client_WD_MarketBased__c = 0, Ref_Client_Assortment__r.New_Client_WD_MarketBased__c, Ref_Client_Assortment__r.L4L_Client_WD_MarketBased__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client WD MarketBased Nego</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>