force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Corp_Clust_Cplt3__c.field-meta.xml
<CustomField>
    <fullName>Ref_Corp_Clust_Cplt3__c</fullName>
    <formula>Ref_Corp_Assortment__r.Client_Clust_Cplt3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Corp Clust Cplt3</label>
    <type>Checkbox</type>
</CustomField>