force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Corp_WD_MarketBased__c.field-meta.xml
<CustomField>
    <fullName>Ref_Corp_WD_MarketBased__c</fullName>
    <formula>Ref_Corp_Assortment__r.New_Client_WD_MarketBased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Corp WD MarketBased</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>