force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Corp_WD_MarketBased_Gap_TargetNegoP1__c.field-meta.xml
<CustomField>
    <fullName>Ref_Corp_WD_MarketBased_Gap_TargetNegoP1__c</fullName>
    <formula>New_Corp_WD_MarketBased_Pts__c - Ref_Client_WD_MarketBased_Nego_Pts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Corp WD MarketBased Gap TargetNegoP1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>