force-app/main/default/objects/Assortment_Detail__c/fields/Ref_Corp_WD_MarketBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>Ref_Corp_WD_MarketBased_Pts__c</fullName>
    <formula>Ref_Corp_WD_MarketBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Corp WD MarketBased (Pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>