force-app/main/default/objects/Assortment_Detail__c/fields/SPKERC_Execution_Rate__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_Execution_Rate__c</fullName>
    <label>Tx de transfo</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>