force-app/main/default/objects/Assortment_Detail__c/fields/SPKERC_NewClientWDClientBasedPtsGap_Corr__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_NewClientWDClientBasedPtsGap_Corr__c</fullName>
    <formula>NewClientWDClientBasedPtsGapNegoP1__c *  SPKERC_Execution_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart DV Nego Ensg revalorisé</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>