force-app/main/default/objects/Assortment_Detail__c/fields/SPKERC_Quantity_YE_Corr__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_Quantity_YE_Corr__c</fullName>
    <formula>New_Client_Quantity_YE__c  *  SPKERC_Execution_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vérifier si le taux de transfo arrive en % ou non et ajouter /100 si ce n&apos;est pas le cas
Formule : New_Client_Quantity_YE__c  x Taux de transfo</inlineHelpText>
    <label>UVC revalorisée</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>