force-app/main/default/objects/Assortment_Detail__c/fields/SPKERC_Ref_Client_WD_ClientBased_Nego_Co__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_Ref_Client_WD_ClientBased_Nego_Co__c</fullName>
    <formula>SPKERC_NewClientWDClientBasedPtsGap_Corr__c  + Ref_Client_WD_ClientBased_Nego__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV Nego Ensg revalorisé</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>