force-app/main/default/objects/Assortment_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In preparation</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>In preparation</label>
            </value>
            <value>
                <fullName>Request for Approval</fullName>
                <color>#78C953</color>
                <label>Request for Approval</label>
            </value>
            <value>
                <fullName>Validated</fullName>
                <color>#E27001</color>
                <label>Validated</label>
            </value>
            <value>
                <fullName>Previously Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>