force-app/main/default/objects/Assortment_Detail__c/fields/Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Validation_Date__c</fullName>
    <description>Give the last validation date for the row (1st validation &amp; next update validation)</description>
    <inlineHelpText>Donne la dernière date de validation (1ère et prochaine maj)</inlineHelpText>
    <label>Validation Date</label>
    <type>Date</type>
</CustomField>