force-app/main/default/objects/Assortment_Detail__c/fields/WD_Conso__c.field-meta.xml
<CustomField>
    <fullName>WD_Conso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Row has been aggregated to the conso layer</description>
    <inlineHelpText>Lignes agrégées sur la conso</inlineHelpText>
    <label>WD Conso</label>
    <type>Checkbox</type>
</CustomField>