force-app/main/default/objects/Assortment_Detail__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>Assortment_BU__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>