force-app/main/default/objects/Assortment_Detail__c/recordTypes/Higher_Level_Packaging.recordType-meta.xml
<RecordType>
    <fullName>Higher_Level_Packaging</fullName>
    <active>true</active>
    <label>Higher-Level Packaging</label>
</RecordType>