force-app/main/default/objects/Assortment_Detail__c/recordTypes/Regular.recordType-meta.xml
<RecordType>
    <fullName>Regular</fullName>
    <active>true</active>
    <label>Regular</label>
</RecordType>